Trying to stop overflow of about me title and canvas on homepage

--- a/css/about.css
+++ b/css/about.css
@@ -19,6 +19,7 @@
     margin: 0;
     padding: 0 5%;
     width: 90%;
+    overflow: hidden;
     
     color: black;
     text-align: center;
