--- a/css/main.css
+++ b/css/main.css
@@ -49,7 +49,8 @@ p {
 html {
 	background: white;
 	font: normal 12px 'Raleway', Helvetica, sans-serif;
-    overflow: hidden;
+    overflow: hidden !important;
+    max-width: 100vw !important;
 }
 
 #wrapper {
